--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,11 +6,11 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: pl
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -35,25 +35,36 @@ framework:
 
 # Twig Configuration
 twig:
-    debug: '%kernel.debug%'
-    strict_variables: '%kernel.debug%'
+    debug:            "%kernel.debug%"
+    strict_variables: "%kernel.debug%"
+    number_format:
+        thousands_separator: ','
+    form_themes:
+        - bootstrap_3_layout.html.twig
 
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver: pdo_mysql
-        host: '%database_host%'
-        port: '%database_port%'
-        dbname: '%database_name%'
-        user: '%database_user%'
-        password: '%database_password%'
-        charset: UTF8
-        # if using pdo_sqlite as your database driver:
-        #   1. add the path in parameters.yml
-        #     e.g. database_path: "%kernel.project_dir%/var/data/data.sqlite"
-        #   2. Uncomment database_path in parameters.yml.dist
-        #   3. Uncomment next line:
-        #path: '%database_path%'
+        default_connection: pgsql
+        connections:
+                   #Mysql
+                   default:
+                        driver:   pdo_mysql
+                        host:     "%database_host%"
+                        port:     "%database_port%"
+                        dbname:   "%database_name%"
+                        user:     "%database_user%"
+                        password: "%database_password%"
+                        charset:  UTF8
+                   #Postgresql
+                   pgsql:
+                        driver:   pdo_pgsql
+                        host:     "%database_host%"
+                        port:     "%database_port%"
+                        dbname:   "%database_name%"
+                        user:     "%database_user%"
+                        password: "%database_password%"
+                        charset:  UTF8
 
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
@@ -65,5 +76,16 @@ swiftmailer:
     transport: '%mailer_transport%'
     host: '%mailer_host%'
     username: '%mailer_user%'
+    encryption: ssl
+    port: 465
     password: '%mailer_password%'
     spool: { type: memory }
+
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+    firewall_name: main
+    user_class: AppBundle\Entity\User
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
