--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,6 @@
     "license": "proprietary",
     "type": "project",
     "autoload": {
-        "psr-0": {
-            "": "src/"
-        },
         "psr-4": {
             "": "src/"
         },
@@ -36,8 +33,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0",
-        "vich/uploader-bundle": "1.0"
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^2.3",
