Frontend - przed zmianą navigacji

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,4 +1,5 @@
 imports:
+    - { resource: admin/easy_admin_bundle.yml }
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
@@ -92,38 +93,5 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
-
-easy_admin:
-    site_name: Karate Kyokushin Rzeszów
-    design:
-      brand_color: '#de1b1b'
-    entities:
-      Category:
-        class: AppBundle\Entity\Category
-      Post:
-        class: AppBundle\Entity\Post
-      User:
-        class: AppBundle\Entity\User
-      Photo:
-        class: AppBundle\Entity\Photo
-        list:
-            fields:
-                - { property: 'imageName', type: 'image', base_path: '%app.path.gallery_image%', label: 'Image' }
-                - { property: 'slug' }
-                - { property: 'imageSize', format: "%0.2f", label: 'Rozmiar (MB)' }
-                - { property: 'gallery' }
-                - { property: 'uploadAt' }
-        new:
-            fields:
-                - { property: 'imageFile',type: 'file', type_options: { required: true }}
-                - { property: 'gallery' }
-        edit:
-            fields:
-                - { property: 'imageFile',type: AppBundle\Form\Type\CustomFileType, type_options: { required: true }}
-                - { property: 'slug' }
-                - { property: 'gallery' }
-
-      Gallery:
-        class: AppBundle\Entity\Gallery
 
 
